# k8s-schemas

./: .gitignore  .k8s-schema-hook.example.yaml  .lefthook.toml  .mise.toml  .pre-commit-hooks.yaml  .renovaterc.json5  LICENSE  README.md  pyproject.toml
.github/workflows/: pull-request.yaml  release.yaml  renovate.yaml
.mise/: config.toml
docs/adr/: 0001-well-known-metadata-catalog.md
extras/bjw-s-labs/app-template/: compose.sh  (+1 more)
hooks/: k8s-yaml-schema  test-k8s-yaml-schema.sh
native/: vendir.yml
scripts/: build.sh  builtins-extract.sh  external.sh  extras.sh  kind-extract.sh  native-schemas.py
sources/barman-cloud/: vendir.yaml
sources/ceph-csi-operator/: vendir.yaml
sources/cert-manager/: vendir.yaml
sources/cilium/: vendir.yaml
sources/cloudnative-pg/: vendir.yaml
sources/dragonfly-operator/: vendir.yaml
sources/envoy-gateway/: vendir.yaml
sources/external-dns/: vendir.yaml
sources/external-secrets/: vendir.yaml
sources/flux/: vendir.yaml
sources/flux-operator/: vendir.yaml
sources/gateway-api/: vendir.yaml
sources/grafana-operator/: vendir.yaml
sources/network-attachment-definitions/: vendir.yaml
sources/onepassword/: vendir.yaml
sources/onepassword-connect/: vendir.yaml
sources/prometheus-operator/: vendir.yaml
sources/renovate-operator/: vendir.yaml
sources/rook-ceph/: vendir.yaml
sources/silence-operator/: vendir.yaml
sources/stunner/: vendir.yaml
sources/talos/: vendir.yaml
sources/toolhive/: vendir.yaml
sources/trust-manager/: vendir.yaml
sources/tuppr/: vendir.yaml
sources/volsync/: vendir.yaml
(+60 files in other folders)
